Update swagger response, rename device fields
