# IoTApi/handlers/IoTDevices.js
@@ -1,4 +1,5 @@
 'use strict';
+var _ = require('lodash');
 var common = require('./common.js');
 var config = require('./azureKeys.js');
 /**
@@ -20,7 +21,7 @@ function registerIoTDevice(req, res) {
 
 	// 1. Create Device on IoTHub
 	// 2. Insert Device into own DB (since some field are not support in IoTHub
-	createIoTDeviceOnHub(req.body.deviceUUID, req.headers.authorization, function(err, data, response) {
+	createIoTDeviceOnHub(req.body, req.headers.authorization, function(err, data, response) {
 		if (err) {
 			return res.status(500).json(err);
 		}
@@ -32,7 +33,7 @@ function registerIoTDevice(req, res) {
 			.then((insertedDoc) => {
 				console.log('common.data = ' + insertedDoc);
 				//res.status(200).json(insertedDoc);
-				res.status(200).json(data);
+				res.status(200).json(_.merge(data, req.body));
 			})
 			.catch((error) => {
 				//status = 500;
@@ -42,12 +43,18 @@ function registerIoTDevice(req, res) {
 	});
 }
 
-function createIoTDeviceOnHub(deviceId, sasToken, callback) {
+function createIoTDeviceOnHub(device, sasToken, callback) {
 	common.http.put(
 		{ Authorization: sasToken }
-		, `https://IoTPOCGateway.azure-devices.net/devices/${deviceId}?api-version=2016-11-14`
+		, `https://IoTPOCGateway.azure-devices.net/devices/${device.deviceId}?api-version=2016-11-14`
 		, {
-			deviceId: deviceId
+			deviceId: device.deviceId
+			, connectionState: device.connectionState
+			, status: device.status
+			, statusReason: device.statusReason
+			, connectionStateUpdatedTime: device.connectionStateUpdatedTime
+			, statusUpdatedTime: device.statusUpdatedTime
+			, lastActivityTime: device.lastActivityTime
 		}
 		, true
 		, callback
